<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OilCheckr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_update_mileage">UpdateMileageActivity</string>
    <string name="title_activity_add_vehicle">AddVehicleActivity</string>
    <string name="title_activity_oil_change">OilChangeActivity</string>
    <string name="title_activity_new_oil">NewOilActivity</string>
    <string name="mileage">Mileage</string>
    <string name="oil_change_target">Oil Change Target</string>
    <string name="current_oil">Current Oil</string>
    <string name="average_oil_month">Average month consumption</string>
    <string name="to_car_history">To car history</string>
    <string name="to_update">To Update</string>
    <string name="oil_change">Oil Change</string>
    <string name="add_new_vehicle">Add new Vehicle</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="km">Km</string>
    <string name="mile">Mile</string>
    <string name="next_step">Continue</string>
    <string name="add_new_oil">Add New Oil</string>
    <string name="oil_name">Oil Name</string>
    <string name="add">Add</string>
    <string name="ten_litres">10 litres</string>
    <string name="eight_thousand">80000</string>
    <string name="km_sample">1000 km</string>
    <string name="km_sample_2">1500 km</string>
    <string name="oil_sample">Castrol 3000</string>
    <string name="km_sample_3">400 km</string>
    <string name="save_mileage">Save</string>
    <string name="current_mileage">Current Mileage</string>
    <string name="oil_capacity_sample">10 Litres</string>
    <string name="oil_for_changing">Choose Oil For Changing</string>
    <string name="capacity">Capacity</string>
    <string name="model">Model</string>
    <string name="no_vehicles">No Vehicles!</string>
    <string name="enter_vehicle_name">Please enter a vehicle name</string>
    <string name="enter_mileage">Please enter vehicle mileage</string>
    <string name="mileage_updated">Mileage updated</string>
    <string name="enter_oil_name">Please enter oil name</string>
    <string name="enter_mileage_range">Please enter mileage range</string>
    <string name="enter_oil_capacity">Please enter oil capacity</string>
    <string name="oil_capacity">Oil Capacity</string>
    <string name="invalid_mileage_update">can\'t be more than 8 digits</string>
    <string name="no_oil_found_message">No oil found yet, please add new oil to your vehicle</string>
</resources>
